ignore the .idea flord

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### IntelliJ ###
+*.iml
+*.ipr
+*.iws
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,6 +133,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-# idea
-.idea
