check port add ping

--- a/MyStripts/port_scan/port_scan.cfg
+++ b/MyStripts/port_scan/port_scan.cfg
@@ -1,17 +1,26 @@
-
 [BASE]
+# log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+log_level=DEBUG
+# Every round collect interval
 collect_frequency=5
-thread_pool_max_workers=6
+# The max thred workers in collect pool
+thread_pool_max_workers=10
+# timeout with telnet
 telnet_timeout=3
+# post realtime data url (send every round collected) to param "keyval"
 post_rt_url=http://127.0.0.1/sightApi/redis/setAcqdataRDatas
+# post history data url (send every 5 minutes) to param "json"
 post_his_url=http://127.0.0.1/sightApi/other/saveHistoryDataFromNodeJs
 
-
 [PORT]
+# to configure ping or telnet target and the value key tagname, example:
+# ping：<ip>,,<tagname>  telnet: <ip>,<port>,<tagname>
+192.168.5.252,,TEST#TEST#TEST66#ip252#online
+192.168.5.253,,TEST#TEST#TEST66#ip253#online
+192.168.5.254,,TEST#TEST#TEST66#ip254#online
 192.168.5.60,80,TEST#TEST#TEST60#port80#online
 192.168.5.60,81,TEST#TEST#TEST60#port81#online
 192.168.5.60,82,TEST#TEST#TEST60#port82#online
 192.168.5.66,80,TEST#TEST#TEST66#port80#online
 192.168.5.66,81,TEST#TEST#TEST66#port81#online
 192.168.5.66,82,TEST#TEST#TEST66#port82#online
-
