modus TCP for apex_efb Right now

--- a/MyStripts/modbus_apex_efb/config.ini
+++ b/MyStripts/modbus_apex_efb/config.ini
@@ -10,6 +10,7 @@ host=127.0.0.1
 port=6379
 db=0
 rt_key_prefix=ACQDATA_R_
+fault_rec_prefix=APEX_REC_
 
 [EFB-1]
 # slave host
@@ -31,6 +32,6 @@ port=502
 # connect to slave time out, unit is second
 out_time=5.0
 # full polling interval, unit is second
-scan_interval=1
+scan_interval=5
 # tagname prefix
-tag_prefix=SS#DD#MM#d01#
+tag_prefix=SS#DD#MM#d02#
