--- a/MyStripts/modbus_apex_efb/config.ini
+++ b/MyStripts/modbus_apex_efb/config.ini
@@ -1,6 +1,8 @@
 [BASE]
 # log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 log_level=DEBUG
+# server port
+server_port=5001
 
 # total meter number to collect
 meter_no=1
