modbus apex efb add handle mysql for fault recode data

--- a/MyStripts/modbus_apex_efb/config.ini
+++ b/MyStripts/modbus_apex_efb/config.ini
@@ -14,6 +14,13 @@ db=0
 rt_key_prefix=ACQDATA_R_
 fault_rec_prefix=APEX_REC_
 
+[MYSQL]
+host=127.0.0.1
+port=3136
+user=root
+password=root
+database=db-deepctrls-ay2fy
+
 [EFB-1]
 # slave host
 host=221.226.253.38
